--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 title: Jun's image signal processing study blog [영상처리 공부 블로그]
 author: amumu79
-email: your-email@domain.com
+email: mjw5554@naver.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  영상처리/딥러닝/논문조사
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  amumu79 # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: minima
